--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     implementation 'com.github.getActivity:XXPermissions:16.0'
     implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'org.greenrobot:eventbus:3.3.1'
 }
